-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
5.4.1
-
None
I am recompiling a Qt 5.4.1 project on OS X 10.10.3 with llvm 6.1.0
Compilation stops due to an apparent conflict between Qt OpenGL definitions and Apple Open GL definitions.
Is it an already known problem? Some suggestions how to fix it?
/Applications/Xcode.app/Contents/Developer/usr/bin/make -f Makefile.Release
llvm-g++ -c -pipe -O2 -fPIC -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk -mmacosx-version-min=10.7 -Wall -W -DISRAEL_CUSTOMER -DOLD_ENGRAVING_SUITE -DQT_DISABLE_DEPRECATED_BEFORE=0x000000 -DOF_MULTITHREAD -DGLEW_STATIC -DMAC_OSX -DGCC_COMPILER -DQT_NO_DEBUG -DQT_DECLARATIVE_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_SCRIPT_LIB -DQT_XMLPATTERNS_LIB -DQT_NETWORK_LIB -DQT_XML_LIB -DQT_CORE_LIB -I. -I. -I.. -I../.. -I../External/glew-1.7.0/include -I../../../Concorde/include -I../External/dirent-1.13/include -I../External/opengl14_include -I../../../vcglib -I../External/jhead-2.95 -I../External/dxflib-3.3.4/include -I../Plugins -I../External/muparser_v132/include -Iinclude -I../Math/include -I../OpenFrameCommon/include -I../External/glew-1.7.0/include -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtDeclarative.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtWidgets.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtGui.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtScript.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtXmlPatterns.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtNetwork.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtXml.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtCore.framework/Versions/5/Headers -Ibin/release -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/AGL.framework/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/mkspecs/macx-llvm -F/Programming/Qt/5.4.0/5.4/clang_64/lib -o bin/release/OF_BasicObject.o src/OF_BasicObject.cpp
llvm-g++ -c -pipe -O2 -fPIC -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk -mmacosx-version-min=10.7 -Wall -W -DISRAEL_CUSTOMER -DOLD_ENGRAVING_SUITE -DQT_DISABLE_DEPRECATED_BEFORE=0x000000 -DOF_MULTITHREAD -DGLEW_STATIC -DMAC_OSX -DGCC_COMPILER -DQT_NO_DEBUG -DQT_DECLARATIVE_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_SCRIPT_LIB -DQT_XMLPATTERNS_LIB -DQT_NETWORK_LIB -DQT_XML_LIB -DQT_CORE_LIB -I. -I. -I.. -I../.. -I../External/glew-1.7.0/include -I../../../Concorde/include -I../External/dirent-1.13/include -I../External/opengl14_include -I../../../vcglib -I../External/jhead-2.95 -I../External/dxflib-3.3.4/include -I../Plugins -I../External/muparser_v132/include -Iinclude -I../Math/include -I../OpenFrameCommon/include -I../External/glew-1.7.0/include -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtDeclarative.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtWidgets.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtGui.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtScript.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtXmlPatterns.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtNetwork.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtXml.framework/Versions/5/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/lib/QtCore.framework/Versions/5/Headers -Ibin/release -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/AGL.framework/Headers -I/Programming/Qt/5.4.0/5.4/clang_64/mkspecs/macx-llvm -F/Programming/Qt/5.4.0/5.4/clang_64/lib -o bin/release/glGraphicObject.o src/glGraphicObject.cpp
In file included from src/glGraphicObject.cpp:1:
In file included from include/glGraphicObject.h:11:
In file included from ../Math/include/basicGeometry.h:4:
In file included from ../OpenFrameCommon/include/OF_LogManager.h:3:
In file included from ../OpenFrameCommon/include/OF_Common.h:4:
In file included from ../OpenFrameCommon/include/OF_QtHeaders.h:15:
In file included from /Programming/Qt/5.4.0/5.4/clang_64/lib/QtGui.framework/Versions/5/Headers/QtGui:32:
In file included from /Programming/Qt/5.4.0/5.4/clang_64/lib/QtGui.framework/Versions/5/Headers/qopenglcontext.h:54:
/Programming/Qt/5.4.0/5.4/clang_64/lib/QtGui.framework/Headers/qopengl.h:186:22: error: typedef redefinition with different types ('unsigned int' vs 'void *')
typedef unsigned int GLhandleARB;
^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/OpenGL.framework/Headers/gltypes.h:28:18: note: previous definition is here
typedef void *GLhandleARB;
Compiliation is fine on Windows 7 + visual studio...
| For Gerrit Dashboard: QTBUG-46149 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 151020,3 | QOpenGL: Fix GLhandleARB redefinition on OS X | 5.6 | qt/qtbase | Status: MERGED | -1 | 0 |