QOpenGL: Fix GLhandleARB redefinition on OS X

Some Qt users include non-system OpenGL headers, resulting
in a possible mismatched redefinition of GLhandleARB.

Ideally, we'd like to skip the whole glext.h inlined portion
and rely on qopenglext.h. However, some issues remain such
as GLDEBUGPROC not being defined on OS X.

Change-Id: Ie551cf0be309234b22cd615cc3703980f48298b9
Task-number: QTBUG-46149
Reviewed-by: Jake Petroules <jake.petroules@theqtcompany.com>

cregit: f319b9b43c313dfa306a62c391e767bc6f14bdee https://github.com/qt/qtbase/commit/f319b9b43c313dfa306a62c391e767bc6f14bdee